# dotfiles

./: .gitignore  CMakeLists.txt  README.md  nvim  setup.sh  welcome.lua  windows-terminal-settings.json  windows.terminal-settings.json  zshrc
ahk/: pseudo_tmux.ahk
flameshot/: flameshot.ini
i3/: config  i3
kitty/: kitty.conf
mutt/: muttrc
nvim/: .editorconfig  init.lua  lazy-lock.json  nvim
nvim/after/plugin/: dap.lua  fugitive.lua  harpoon.lua  lsp.lua  markdown.lua  null-ls.lua  obsidian.lua  treesitter.lua
nvim/lua/atariaf/: init.lua  lazy.lua  packer.lua  remap.lua  set.lua
nvim/lua/atariaf/plugins/: dap.lua  lsp.lua  mason.lua  mini.lua  render-markdown.lua  telescope.lua  treesitter.lua  vim-pencil.lua
nvim/plugin/: packer_compiled.lua
polybar/: config  polybar
rofi/: config.rasi  rosepine.rasinc
tmux/: tmux.conf
wezterm/: prog-launcher.lua  wezterm.lua
wezterm-windows/: wezterm  wezterm.lua
wezterm-windows/commands/: init.lua
wezterm/commands/: toggle-transparency.lua
